<resources>
    <!-- Hints -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="your_email">Your E-mail</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="search">Search</string>

    <!-- activity_main -->
    <string name="app_name">GUI</string>
    <string name="hello">Hello!</string>
    <string name="welcome">Welcome to xxx</string>
    <string name="create_account">Don\'t have an account? <b>Create</b>!</string>
    <string name="forgotten_password">Forgot your password?</string>
    <string name="sign_in">Sign In</string>


    <!-- create_account -->
    <string name="create_account_title">Create account</string>
    <string name="terms_services">I agree with <u>Terms and services</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="have_account">Have already an account? <b>Login here!</b></string>

    <!-- my_locks -->
    <string name="my_locks">My Locks!</string>
    <string name="active_locks">Currently you have X locks active</string>


    <!-- Settings -->
    <string name="share_multiple_locks">Share Multiple Locks</string>
    <string name="manage_notifications">Manage Notifications</string>
    <string name="change_email">Change e-mail</string>
    <string name="delete_account">Delete Account</string>
    <string name="settings">Settings</string>



    <!-- Share Locks-->
    <string name="sharelocks">Share Locks</string>
    <string name="selectlockid">Select lock <b>ID</b></string>
    <string name="sharewith">Share with</string>
    <string name="sharebutton">Share</string>



    <!-- Notifications -->
    <string name="notifications">Notifications</string>
    <string name="allownotifications">Allow System Notifications</string>
    <string name="donotdisturb">Do Not Disturb</string>

    <!-- Change Email-->
    <string name="changeyouremail">Change your e-mail</string>
    <string name="oldemail">Enter your <b>old</b> e-mail</string>
    <string name="newemail">Enter your <b>new</b> e-mail</string>
    <string name="changeemail">Change e-mail </string>


    <!-- Allocate Locks -->

    <string name="allocatelocks">Allocate Locks</string>
    <string name="allocatebutton">Allocate</string>






    <!-- Locker Info -->


    <string name="lockername">Locker_Name</string>
    <string name="lockeruseridentifier">#Locker_User_Identifier</string>
    <string name="lockisopen"><font color="#000000">Lock is</font><font color="#fb5654"> Open</font></string>
    <string name="lastaccess"><font color="#00000">Last Access:</font></string>
    <string name="dateoflastaccess"><font color="#8e9999">dd/mm/yyyy</font></string>
    <string name="info"><font color="#568798"><u>+info:</u></font></string>
    <string name="numberofusers"><font color="#000000">Number of users:</font></string>
    <string name="numberofusersinfo"><font color="#8e9999">X</font></string>
    <string name="changelockpassword"><font color="#00000">Change User #ID Lock Password</font></string>
    <string name="exitbutton"><font color="#568798">exit</font></string>
    <string name="closelock">Close Lock</string>


    <!-- Locker Owner Info -->


    <string name="ownerlockername">Locker_Name</string>
    <string name="ownerlockeruseridentifier">#Owner (By default ID is 0)</string>
    <string name="ownerlockisclosed"><font color="#000000">Lock is</font><font color="#5cdc61"> Closed</font></string>
    <string name="ownerlastaccess"><font color="#00000">Last Access:</font></string>
    <string name="ownerdateoflastaccess"><font color="#8e9999">dd/mm/yyyy</font></string>
    <string name="ownerinfo"><font color="#568798"><u>+info:</u></font></string>
    <string name="ownernumberofusers"><font color="#000000">Number of users:</font></string>
    <string name="ownernumberofusersinfo"><font color="#8e9999">X</font></string>
    <string name="ownerchangelockpassword"><font color="#00000">Change User #ID Lock Password</font></string>
    <string name="ownerexitbutton"><font color="#568798">exit</font></string>
    <string name="owneropenlock">Open Lock</string>
    <string name="ownersharelockbutton">Share Lock</string>




    <!-- Change Username -->

    <string name="changeyourusername">Change your Username</string>
    <string name="enteryournewusername">Enter your <b>new</b> username</string>
    <string name="newdisplayname">New Display Name</string>
    <string name="confirmchangebutton">Confirm Change</string>


    <!-- Change Password -->

    <string name="changeyourpassword">Change your password</string>
    <string name="enteryouroldpassword">Enter your <b>old</b> password</string>
    <string name="enteryournewpassword">Enter your <b>new</b> password</string>
    <string name="confirmyournewpassword">Confirm your <b>new</b> password</string>
    <string name="changepasswordbutton">Change Password</string>

    <!-- Profile Page -->

    <string name="welcometoaccount">XXX, Welcome to your account!</string>
    <string name="youremail">Your e-mail:</string>
    <string name="changepasswordpagebutton">Change Password</string>
    <string name="changedisplayname">Change Display Name</string>
    <string name="settingspagebutton">Settings</string>
    <string name="logout">Log out</string>


    <!-- My Locks (Admin) -->

    <string name="locksadmin">Locks</string>
    <string name="activelocksadmin">There are a total of <b>X</b> active locks</string>




    <!-- Manual locket setup -->


    <string name="manuallocketsetup">Manual setup of Locker</string>
    <string name="openwifisettings">Open Wifi settings</string>
    <string name="connectotowifi">Connect to Wifi "Lock_Conf_XX"</string>
    <string name="returntothispage">Return to this page</string>
    <string name="num1"> 1</string>
    <string name="num2"> 2</string>
    <string name="num3"> 3</string>


</resources>