<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".MainActivity">

    <View
        android:id="@+id/horizontallinesetup3"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="#80b1aa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info1" />

    <View
        android:id="@+id/horizontallinesetup4"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="#80b1aa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info2" />

    <View
        android:id="@+id/horizontallinesetup5"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:background="#80b1aa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changelockpassword" />

    <TextView
        android:id="@+id/numberofuserstext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/numberofusersinfo"
        app:layout_constraintEnd_toEndOf="@+id/horizontallinesetup2"
        app:layout_constraintTop_toBottomOf="@+id/horizontallinesetup3" />

    <TextView
        android:id="@+id/numberofusers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/numberofusers"
        app:layout_constraintStart_toStartOf="@+id/horizontallinesetup2"
        app:layout_constraintTop_toBottomOf="@+id/horizontallinesetup3" />

    <TextView
        android:id="@+id/info2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/info"
        app:layout_constraintStart_toStartOf="@+id/lastaccess"
        app:layout_constraintTop_toBottomOf="@+id/numberofusers" />

    <View
        android:id="@+id/horizontallinesetup2"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="#80b1aa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/closelockbutton" />

    <ImageView
        android:id="@+id/wave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        android:rotation="1"
        android:scaleType="centerCrop"
        android:scaleX="1.2"
        android:scaleY="1.5"
        android:translationY="-10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wave" />

    <TextView
        android:id="@+id/lockername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/lockername"
        android:textColor="@color/Text_Bold"
        android:textSize="55sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lockeruseridentifier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lockeruseridentifier"
        android:textColor="@color/Text_Bold"
        app:layout_constraintStart_toStartOf="@+id/lockername"
        app:layout_constraintTop_toBottomOf="@+id/lockername" />

    <Button
        android:id="@+id/closelockbutton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/rounded_view"
        android:paddingHorizontal="24dp"
        android:paddingVertical="10dp"
        android:text="@string/closelock"
        android:textAllCaps="false"
        android:textColor="#F6F1D1"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wave" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/lockisopen"
        app:layout_constraintBottom_toTopOf="@+id/closelockbutton"
        app:layout_constraintStart_toStartOf="@+id/closelockbutton" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/closelockbutton"
        app:layout_constraintEnd_toEndOf="@+id/closelockbutton"
        app:srcCompat="@android:drawable/ic_lock_idle_lock" />

    <TextView
        android:id="@+id/lastaccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/lastaccess"
        app:layout_constraintStart_toStartOf="@+id/horizontallinesetup2"
        app:layout_constraintTop_toBottomOf="@+id/horizontallinesetup2" />

    <TextView
        android:id="@+id/dateoflastaccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/dateoflastaccess"
        app:layout_constraintEnd_toEndOf="@+id/horizontallinesetup2"
        app:layout_constraintTop_toBottomOf="@+id/horizontallinesetup2" />

    <TextView
        android:id="@+id/info1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/info"
        app:layout_constraintStart_toStartOf="@+id/lastaccess"
        app:layout_constraintTop_toBottomOf="@+id/lastaccess" />

    <TextView
        android:id="@+id/changelockpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/changelockpassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontallinesetup4" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/background_color"
        android:text="@string/exitbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontallinesetup5" />


</androidx.constraintlayout.widget.ConstraintLayout>